--- a/documents/sass-tutorial.html
+++ b/documents/sass-tutorial.html
@@ -37,17 +37,17 @@
 
     <p>Published on: 2011-02-20</p>
 
-    <h2 id='install_ruby_and_sass'>Ruby と Sass のインストール</h2>
+    <h2 id="install_ruby_and_sass">Ruby と Sass のインストール</h2>
 
-    <p>まず、Sass がちゃんと動作するようにします。OS X を使用しているのなら、既に Ruby がインストールされているでしょう。Windows ユーザーならば Ruby の<a href='http://rubyinstaller.org/download.html'>Windows インストーラー</a>で、Linux ユーザーならパッケージ・マネージャーでそれぞれ Ruby をインストールすることが出来ます。</p>
+    <p>まず、Sass がちゃんと動作するようにします。OS X を使用しているのなら、既に Ruby がインストールされているでしょう。Windows ユーザーならば Ruby の<a href="http://rubyinstaller.org/download.html">Windows インストーラー</a>で、Linux ユーザーならパッケージ・マネージャーでそれぞれ Ruby をインストールすることが出来ます。</p>
 
     <p>Ruby のインストールが完了したら、以下のようにして Sass のインストールを行います:</p>
 
     <pre><code>gem install sass</code></pre>
 
-    <h2 id='your_first_sass_stylesheet'>最初の Sass スタイルシート</h2>
+    <h2 id="your_first_sass_stylesheet">最初の Sass スタイルシート</h2>
 
-    <p>非常にシンプルな SCSS ファイルの作成から始めてみましょう。SCSS は CSS3 を拡張したものなので、まずは簡単な CSS から始めます。<a href='http://sass-lang.com/editors.html'>テキスト・エディタ</a>で <strong><code>style.scss</code></strong> という名前で新しくファイルを作成し、以下のコードを入力します:</p>
+    <p>非常にシンプルな SCSS ファイルの作成から始めてみましょう。SCSS は CSS3 を拡張したものなので、まずは簡単な CSS から始めます。<a href="http://sass-lang.com/editors.html">テキスト・エディタ</a>で <strong><code>style.scss</code></strong> という名前で新しくファイルを作成し、以下のコードを入力します:</p>
 
     <pre>/* style.scss */
       #navbar {
@@ -63,18 +63,18 @@
 
     <pre><code>sass --watch stylesheets/sass:stylesheets/compiled</code></pre>
 
-    <h2 id='features'>特徴</h2>
+    <h2 id="features">特徴</h2>
 
     <p>素晴らしいことにあらゆる CSS ファイルは妥当な SCSS ファイルなので、SCSS について学ぶことは多くありません。CSS <em>より</em>も何が出来るのかを学ぶことになるでしょう。SCSS は最新の CSS の機能を全て提供します。このチュートリアルでは、<code>style.scss</code> に追加して簡単に試せるようなサンプルで最も基本的なことを練習します。</p>
 
-    <h3 id='nesting'>ネスト</h3>
+    <h3 id="nesting">ネスト</h3>
 
     <p>CSS を書いていると多くのセレクタがほとんと同じもので始まることがよくあります。例えば &#8220;#navbar ul&#8221; や &#8220;#navbar li&#8221;、&#8220;#navbar li a&#8221;などです。何度も何度も同じもので始めるというのは、特にそれが長い時には、苦痛でしかありません。</p>
 
     <p>Sass では子セレクタを親セレクタにネストすることによってそれを回避することができます:</p>
 
-    <div class='compare'>
-      <pre class='sass'>/* style.scss */
+    <div class="compare">
+      <pre class="sass">/* style.scss */
 
 #navbar {
   width: 80%;
@@ -87,7 +87,7 @@
   }
 }</pre>
 
-      <pre class='css'>/* style.css */
+      <pre class="css">/* style.css */
 
 #navbar {
   width: 80%;
@@ -104,8 +104,8 @@
 
     <p>また、プロパティをネストすることもでき、&#8220;<code>border-left-</code>&#8221; などといったものをなんども繰り返す必要はありません:</p>
 
-    <div class='compare'>
-      <pre class='sass'>/* style.scss */
+    <div class="compare">
+      <pre class="sass">/* style.scss */
 
 .fakeshadow {
   border: {
@@ -121,7 +121,7 @@
   }
 }</pre>
 
-      <pre class='css'>/* style.css */
+      <pre class="css">/* style.css */
 
 .fakeshadow {
   border-style: solid;
@@ -131,12 +131,12 @@
   border-right-color: #ccc; }</pre>
     </div>
 
-    <h4 id='parent_references'>親の参照</h4>
+    <h4 id="parent_references">親の参照</h4>
 
     <p><code>:hover</code> といった擬似クラスではどうでしょうか？親セレクタと擬似クラスの間に半角スペースはありませんが、これもネストすることができます。Sass の特殊文字 <code>&amp;</code> を使う必要があるだけです。セレクタ内では <code>&amp;</code> は親セレクタに置換されます:</p>
 
-    <div class='compare'>
-      <pre class='sass'>/* style.scss */
+    <div class="compare">
+      <pre class="sass">/* style.scss */
 
 a {
   color: #ce4dd6;
@@ -144,7 +144,7 @@ a {
   &amp;:visited { color: #c458cb; }
 }</pre>
 
-      <pre class='css'>/* style.css */
+      <pre class="css">/* style.css */
 
 a {
   color: #ce4dd6; }
@@ -154,12 +154,12 @@ a {
     color: #c458cb; }</pre>
     </div>
 
-    <h2 id='variables'>変数</h2>
+    <h2 id="variables">変数</h2>
 
     <p>Sass では変数を定義することができ、それはスタイルシート全体で利用することができます。変数は <code>$</code> で始まり、プロパティと同じようにして定義します。CSS プロパティの値として許可されているもの、色や数値(マイナス付きも)・文字列ならどんな値もとることができます:</p>
 
-    <div class='compare'>
-      <pre class='sass'>/* style.scss */
+    <div class="compare">
+      <pre class="sass">/* style.scss */
 
 #navbar {
   $navbar-width: 800px;
@@ -182,7 +182,7 @@ a {
   }
 }</pre>
 
-      <pre class='css'>/* style.css */
+      <pre class="css">/* style.css */
 
 #navbar {
   border-bottom-color: #ce4dd6;
@@ -196,14 +196,14 @@ a {
 
     <p>変数によって色やサイズ、その他の値を繰り返すことなく再利用することが出来ます。つまり、少しの変更、色合いやサイズの微調整なら、スタイルシート全体を編集することなくたった一ヶ所の変更によって完了するのです。</p>
 
-    <h3 id='operations_and_functions'>式と関数</h3>
+    <h3 id="operations_and_functions">式と関数</h3>
 
     <p>変数をそのまま定義された通り使うことに加え、計算式や定義済みの関数でそれらを変更したり、組み合わせたりすることもできます。これにより要素のサイズや色合いを動的に決定できるようになっています。</p>
 
-    <p>一般的な計算式の記号(<code>+</code> や <code>-</code>・<code>*</code>・<code>/</code>・<code>%</code>) では単位付きも含めて数字を処理できます。色には<a href='http://sass-lang.com/docs/yardoc/Sass/Script/Functions.html#lighten-instance_method'>明るさ</a>や<a href='http://sass-lang.com/docs/yardoc/Sass/Script/Functions.html#adjust_hue-instance_method'>色調</a>、<a href='http://sass-lang.com/docs/yardoc/Sass/Script/Functions.html#saturate-instance_method'>彩度</a>、<a href='http://sass-lang.com/docs/yardoc/Sass/Script/Functions.html'>その他</a>の便利な関数が用意されています:</p>
+    <p>一般的な計算式の記号(<code>+</code> や <code>-</code>・<code>*</code>・<code>/</code>・<code>%</code>) では単位付きも含めて数字を処理できます。色には<a href="http://sass-lang.com/docs/yardoc/Sass/Script/Functions.html#lighten-instance_method">明るさ</a>や<a href="http://sass-lang.com/docs/yardoc/Sass/Script/Functions.html#adjust_hue-instance_method">色調</a>、<a href="http://sass-lang.com/docs/yardoc/Sass/Script/Functions.html#saturate-instance_method">彩度</a>、<a href="http://sass-lang.com/docs/yardoc/Sass/Script/Functions.html">その他</a>の便利な関数が用意されています:</p>
 
-    <div class='compare'>
-      <pre class='sass'>/* style.scss */
+    <div class="compare">
+      <pre class="sass">/* style.scss */
 
 #navbar {
   $navbar-width: 800px;
@@ -226,7 +226,7 @@ a {
   }
 }</pre>
 
-      <pre class='css'>/* style.css */
+      <pre class="css">/* style.css */
 
 #navbar {
   width: 800px;
@@ -239,12 +239,12 @@ a {
       background-color: #d976e0; }</pre>
     </div>
 
-    <h3 id='interpolation'>インターポレーション</h2>
+    <h3 id="interpolation">インターポレーション</h3>
 
     <p>変数はプロパティの値に使えるだけではありません。<code>#{}</code> で括ることによってプロパティ名やセレクタに使うこともできます:</p>
 
-    <div class='compare'>
-      <pre class='sass'>/* style.scss */
+    <div class="compare">
+      <pre class="sass">/* style.scss */
 
 $side: top;
 $radius: 10px;
@@ -255,7 +255,7 @@ $radius: 10px;
   -webkit-border-#{$side}-radius: $radius;
 }</pre>
 
-      <pre class='css'>/* style.css */
+      <pre class="css">/* style.css */
 
 .rounded-top {
   border-top-radius: 10px;
@@ -263,14 +263,14 @@ $radius: 10px;
   -webkit-border-top-radius: 10px; }</pre>
     </div>
 
-    <h2 id='mixins'>ミックスイン</h2>
+    <h2 id="mixins">ミックスイン</h2>
 
     <p>ミックスインは Sass 最も強力な特徴の一つです。スタイル &#8211; 複数のプロパティやセレクタすら &#8211; の再利用をコピー・アンド・ペーストなしでセマンティクスの欠片も感じられないクラス名に格納することなく行うことが出来るようになります。</p>
 
     <p>&#8220;<code>@mixin</code>&#8221; というディレクティブでスタイルのブロックを括ることによってミックスインは定義され、セレクタ内で &#8220;<code>@include</code>&#8221; ディレクティブによって参照されます:</p>
 
-    <div class='compare'>
-      <pre class='sass'>/* style.scss */
+    <div class="compare">
+      <pre class="sass">/* style.scss */
 
 @mixin rounded-top {
   $side: top;
@@ -284,7 +284,7 @@ $radius: 10px;
 #navbar li { @include rounded-top; }
 #footer { @include rounded-top; }</pre>
 
-      <pre class='css'>/* style.css */
+      <pre class="css">/* style.css */
 
 #navbar li {
   border-top-radius: 10px;
@@ -297,14 +297,14 @@ $radius: 10px;
   -webkit-border-top-radius: 10px; }</pre>
     </div>
 
-    <h3 id='arguments'>引数</h3>
+    <h3 id="arguments">引数</h3>
 
     <p>ミックスインの真価は引数を渡すことによって発揮されます。引数は括弧で括られたカンマ区切りの変数のリストで定義されます。これらの値はそれぞれミックスインから使われる度に新たに割り当てられます。</p>
 
     <p>ミックスインの引数では通常使われる値としてデフォルトの値を定義できます。ミックスインを使う時に引数を渡さなければデフォルトの値が割り当てられるでしょう:</p>
 
-    <div class='compare'>
-      <pre class='sass'>/* style.scss */
+    <div class="compare">
+      <pre class="sass">/* style.scss */
 
 @mixin rounded($side, $radius: 10px) {
   border-#{$side}-radius: $radius;
@@ -316,7 +316,7 @@ $radius: 10px;
 #footer { @include rounded(top, 5px); }
 #sidebar { @include rounded(left, 8px); }</pre>
 
-      <pre class='css'>/* style.css */
+      <pre class="css">/* style.css */
 
 #navbar li {
   border-top-radius: 10px;
@@ -334,7 +334,7 @@ $radius: 10px;
   -webkit-border-left-radius: 8px; }</pre>
     </div>
 
-    <h2 id='at-import'><code>@import</code></h2>
+    <h2 id="at-import"><code>@import</code></h2>
 
     <p>スタイルシートは時に巨大になることがあります。CSS には <code>@import</code> ディレクティブがあり、これにより複数のスタイルシートに分割することができますが、それぞれのスタイルシートは別々の HTTP リクエストで(遅れて)処理されます。これが Sass が <code>@import</code> ディレクティブでスタイルシートの中身を統合する理由です。それだけでなく、<code>@import</code> で指定されたファイルで定義された変数やミックスインもインポートした側で利用することができます。</p>
 
@@ -342,8 +342,8 @@ $radius: 10px;
 
     <p><code>.scss</code> ファイルと <code>.sass</code> ファイルの両方をサポートするため、Sass ではファイルの拡張子なしでインポートすることができます。つまり、<code>&quot;rounded.scss&quot;</code> ではなく <code>&quot;rounded&quot;</code> をインポートすれば良いのです:</p>
 
-    <div class='compare'>
-      <pre class='sass'>/* _rounded.scss */
+    <div class="compare">
+      <pre class="sass">/* _rounded.scss */
 
 @mixin rounded($side, $radius: 10px) {
   border-#{$side}-radius: $radius;
@@ -351,7 +351,7 @@ $radius: 10px;
   -webkit-border-#{$side}-radius: $radius;
 }</pre>
 
-      <pre class='css'>/* style.css */
+      <pre class="css">/* style.css */
 
 #navbar li {
   border-top-radius: 10px;
@@ -368,7 +368,7 @@ $radius: 10px;
   -moz-border-radius-left: 8px;
   -webkit-border-left-radius: 8px; }</pre>
 
-      <pre class='sass'>/* style.scss */
+      <pre class="sass">/* style.scss */
 
 @import "rounded";
 
@@ -377,38 +377,38 @@ $radius: 10px;
 #sidebar { @include rounded(left, 8px); }</pre>
     </div>
 
-    <h2 id='further_reading'>その他参照すべきもの</h2>
+    <h2 id="further_reading">その他参照すべきもの</h2>
 
-    <p>Sass を使うにはこれで十分でしょうが、他にも読んでおいたほうが良い物がいくつかあります: <a href='http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#options'>実行時に指定できる全てのオプション</a>や <a href='http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#plugin'>Rails/Rack プラグインとして使う方法</a>など、Sass が出来ることの全てが書いてある <a href='http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html'>Sass のリファレンス</a>を参照してみましょう。</p>
+    <p>Sass を使うにはこれで十分でしょうが、他にも読んでおいたほうが良い物がいくつかあります: <a href="http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#options">実行時に指定できる全てのオプション</a>や <a href="http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#plugin">Rails/Rack プラグインとして使う方法</a>など、Sass が出来ることの全てが書いてある <a href="http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html">Sass のリファレンス</a>を参照してみましょう。</p>
 
-    <p>Sass について何か助けが必要な時などは、<a href='http://webchat.freenode.net/'>irc.freenode.net</a> にある #sass (そこに誰もいなかった場合は #haml) に参加してみてください。質問は <a href='http://groups.google.com/group/haml'>Haml/Sass のメーリング・リスト</a>でも大丈夫です。</p>
+    <p>Sass について何か助けが必要な時などは、<a href="http://webchat.freenode.net/">irc.freenode.net</a> にある #sass (そこに誰もいなかった場合は #haml) に参加してみてください。質問は <a href="http://groups.google.com/group/haml">Haml/Sass のメーリング・リスト</a>でも大丈夫です。</p>
 
     <hr>
 
     <p>Haml &copy; 2006-2010
-    <a href="http://hamptoncatlin.com">Hampton Catlin</a>,
-    <a href="http://nex-3.com">Nathan Weizenbaum</a>,
-    <a href="http://chriseppstein.github.com">Chris Eppstein</a>,
-    and numerous contributors.
-    It is available for use and modification
-    under the <a href="http://sass-lang.com/docs/yardoc/file.MIT-LICENSE.html">MIT license</a>.</p>
+      <a href="http://hamptoncatlin.com">Hampton Catlin</a>,
+      <a href="http://nex-3.com">Nathan Weizenbaum</a>,
+      <a href="http://chriseppstein.github.com">Chris Eppstein</a>,
+      and numerous contributors.
+      It is available for use and modification
+      under the <a href="http://sass-lang.com/docs/yardoc/file.MIT-LICENSE.html">MIT license</a>.</p>
 
-<hr>
+    <hr>
 
-<address>
-  <p>Translated by <a href="https://kyonagashima.com/">Kyo Nagashima</a>.</p>
-</address>
+    <address>
+      <p>Translated by <a href="https://kyonagashima.com/">Kyo Nagashima</a>.</p>
+    </address>
 
-<!-- Google Analytics -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-42525667-1', 'hail2u.net');
-  ga('send', 'pageview');
+      ga('create', 'UA-42525667-1', 'hail2u.net');
+      ga('send', 'pageview');
 
-</script>
-</body>
+    </script>
+  </body>
 </html>
