--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
               
 
-              <p>Readabilityを愛して止まなかっただけど、結構な頻度で読めない、または画像がうまく出ないみたいな感じになってきたので、遂に諦めてInstapaperに乗り換えた。特に良いなと思ったところもないけれど、悪いと思ったところもまるでなく、スムーズに乗り換えられた。日付やお気に入りを維持してインポートすることができた。</p>
+              <p>Readabilityを愛して止まなかっただけど、結構な頻度で読めない、または画像がうまく出ないみたいな感じになってきたので、遂に諦めてInstapaperに乗り換えた。特に良いなと思ったところもないけれど、悪いと思ったところもまるでない。日付やお気に入りを維持してインポートすることができ、スムーズに乗り換えることができた。</p>
             </a>
         </section>
 
