--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
               <figure><img alt="カルディオリジナル　ドリップコーヒーフィルター（カップ用）　30p" height="496" src="/images/blog/kaldi-drip-coffee-filter-for-cup.jpg" width="376"></figure>
 
-              <p>普段はモカエキスプレス一辺倒で、そうでなければ水出しコーヒーなので、ドリップでコーヒー入れない。そのためまともなドリッパーがない。あるのは既に穴が割れててすごいダメな感じのだけ。そこそこ場所取るので、買い直そうという気もない。KALDIに使い捨てのカップ用ドリッパーがあったので、それを買った。</p>
+              <p>普段はモカエキスプレス一辺倒で、そうでなければ水出しコーヒーなので、めったにドリップでコーヒーを淹れない。そのためまともなドリッパーがない。あるのは既に穴が割れててすごいダメな感じのだけ。そこそこ場所取るので、買い直そうという気もない。KALDIに使い捨てのカップ用ドリッパーがあったので、それを買った。</p>
             </a>
         </section>
 
