--- a/pub/test/633.html
+++ b/pub/test/633.html
@@ -28,7 +28,7 @@
     <header>
       <h1>list-style-type: "string";</h1>
 
-      <p>文字列をリスト・マーカーに設定し、それを横並びのリストの区切りとするデモ。</p>
+      <p>文字列をリスト・マーカーに設定し、それを横並びのリストの区切りとするデモ。Firefox 39以降のみ。</p>
     </header>
 
     <section class="test">
