--- a/pub/test/634.html
+++ b/pub/test/634.html
@@ -81,7 +81,7 @@
         };
 
         var addPage = debounce(function () {
-          if (d.body.scrollTop < (d.body.scrollHeight - w.innerHeight) * 0.9) {
+          if (w.scrollY < (d.documentElement.scrollHeight - w.innerHeight) * 0.9) {
             return;
           }
 
