--- a/pub/test/635.html
+++ b/pub/test/635.html
@@ -16,6 +16,8 @@
   <body>
     <header>
       <h1>OGP with link Element</h1>
+
+      <p>RDFa Liteとしては妥当な<code>link</code>要素を使ったOGPメタデータの提示が、Facebookが解釈できるかどうか。</p>
     </header>
   </body>
 </html>
