--- a/pub/test/635.html
+++ b/pub/test/635.html
@@ -10,6 +10,8 @@
     <meta content="article" property="og:type">
     <link href="//hail2u.net/pub/test/635.html" property="og:url">
     <link href="../../images/apple-touch-icon.png" property="og:image">
+    <meta content="summary" name="twitter:card">
+    <meta content="@hail2u_" name="twitter:site">
 
     <link href="http://hail2u.net/styles/natural.min.css" rel="stylesheet">
   </head>
