--- a/pub/test/635.html
+++ b/pub/test/635.html
@@ -10,6 +10,7 @@
     <meta content="article" property="og:type">
     <link href="//hail2u.net/pub/test/635.html" property="og:url">
     <link href="../../images/apple-touch-icon.png" property="og:image">
+    <meta content="RDFa Liteとしては妥当な<code>link</code>要素を使ったOGPメタデータの提示が、Facebookが解釈できるかどうか。" property="og:description">
     <meta content="summary" name="twitter:card">
     <meta content="@hail2u_" name="twitter:site">
 
