--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja" itemscope itemtype="http://schema.org/AboutPage http://schema.org/ContactPage">
+<html lang="ja" itemscope itemtype="http://schema.org/AboutPage">
   <head>
     <meta charset="UTF-8">
     <meta content="width=device-width" name="viewport">
@@ -19,7 +19,7 @@
     
     
     <meta content="About - Hail2u.net" property="og:title">
-    <meta content="article" property="og:type">
+    <meta content="website" property="og:type">
     <meta content="http://hail2u.net/images/about/i-know-what-you-want-to-know.png" property="og:image">
     <meta content="http://hail2u.net/about/" property="og:url">
     <meta content="Hail2u.netについて、奥付、問い合わせする際の連絡先についてのページです。" property="og:description">
