--- a/documents/index.html
+++ b/documents/index.html
@@ -19,7 +19,7 @@
     
     
     <meta content="Documents - Hail2u.net" property="og:title">
-    <meta content="article" property="og:type">
+    <meta content="website" property="og:type">
     <meta content="http://hail2u.net/images/documents/publish-what-i-learned.png" property="og:image">
     <meta content="http://hail2u.net/documents/" property="og:url">
     <meta content="文書や翻訳、表、チュートリアルなど、独立して提供している文書群についてのページです。" property="og:description">
