--- a/404.html
+++ b/404.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
 
-    <title>404 Not Found</title>
+    <title>Hail2u.net - Page Not Found</title>
 
     <style>
       html {
-        background-color: #fcf9f0;
-        color: #3c3330;
+        background-color: #fff;
+        color: #000;
         display: table;
         height: 100%;
         margin: auto;
@@ -20,39 +20,32 @@
       body {
         display: table-cell;
         font-family: "Helvetica Neue", "Calibri", sans-serif;
-        line-height: 1.618;
+        line-height: 1.5;
         margin: 0;
-        padding: 1em;
+        padding: .5em;
         vertical-align: middle;
       }
 
-      .logo {
-        display: block;
-        line-height: 1;
-        height: 2em;
-        width: 2em;
-      }
-
-      .logo img {
-        height: auto;
-        width: 100%;
+      a {
+        color: #06f;
       }
 
       .title {
-        font-size: 100%;
-        font-weight: normal;
-        margin: 3em 0 0;
+        font-size: 200%;
+        line-height: 1;
+        margin: 0;
       }
 
       .description {
         margin: 2em 0 0;
       }
 
-      .searchbox {
-        margin: 2em 0 0;
+      .note,
+      .site-search {
+        margin: 1.5em 0 0;
       }
 
-      .input {
+      .query {
         box-sizing: border-box;
         font-family: inherit;
         font-size: 100%;
@@ -66,44 +59,24 @@
         font-family: inherit;
         font-size: 100%;
         height: 2em;
-        letter-spacing: .75em;
-        padding: .125em .25em .125em 1em;
+        padding: .125em 1em;
         vertical-align: bottom;
-      }
-
-      .byline {
-        margin: 3em 0 0;
-      }
-
-      .byline:before {
-        border-top: .125em solid #e1ddd5;
-        display: block;
-        content: '';
-        height: 0;
-        margin-bottom: .875em;
-        width: 2em;
-      }
-
-      .byline a {
-        color: #18b;
-        text-decoration: none;
       }
     </style>
   </head>
   <body>
-    <a class="logo" href="/"><img alt="Hail2u.net" src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20fill%3D%22%235bacd0%22%20d%3D%22M-8-8h528v528H-8z%22%2F%3E%3Cpath%20d%3D%22M160%20128v256h16V128zm32%200v256h16V128zm112%200v96h-80v16h96V128zm32%200v256h16V128zM224%20256v16h80v112h16V256z%22%20fill%3D%22%23fcf9f0%22%2F%3E%3C%2Fsvg%3E"></a>
+    <h1 class="title">Page Not Found</h1>
 
-    <h1 class="title"><strong>404</strong>. Error, Probably.</h1>
+    <p class="description">お探しのページは見つかりませんでした。</p>
 
-    <p class="description">お探しのページは見つかりませんでした。以下の検索フォームより、このウェブサイト内を検索してみてください。</p>
+    <section>
+      <p class="note"><a href="/">ホームページ</a>より探しなおすか、以下の検索フォームよりこのウェブサイト内を検索してみてください。</p>
 
-    <form class="searchbox" action="http://www.google.com/cse">
-      <input type="hidden" name="cx" value="partner-pub-8712792805045949:3747342316">
-      <input type="hidden" name="ie" value="UTF-8">
-      <input class="input" name="q" size="32" type="search">
-      <input class="button" name="sa" type="submit" value="検索">
-    </form>
-
-    <p class="byline">Made by <a href="https://kyonagashima.com/">Kyo Nagashima</a>.</p>
+      <form class="site-search" action="https://duckduckgo.com/" role="search">
+        <input name="sites" type="hidden" value="hail2u.net">
+        <input class="query" name="q" size="32" type="search">
+        <input class="button" type="submit" value="検索">
+      </form>
+    </section>
   </body>
 </html>
