--- a/about/index.html
+++ b/about/index.html
@@ -95,7 +95,7 @@
           <li><a href="/blog/feed" type="application/rss+xml">ウェブログの記事のみ</a></li>
         </ul>
 
-        <p>他に<a href="https://twitter.com/hail2unet" rel="alternate" type="text/html">Twitter</a>や<a href="https://www.facebook.com/hail2u.net" rel="alternate" type="text/html">Facebookページ</a>、<a href="http://u2liah.tumblr.com/" rel="alternate" type="text/html">Tumblr</a>でも購読することができます。</p>
+        <p>他に<a href="https://twitter.com/hail2unet" rel="alternate" type="text/html">Twitter</a>や<a href="https://www.facebook.com/hail2u.net" rel="alternate" type="text/html">Facebookページ</a>でも購読することができます。</p>
 
         <h2>ライセンス</h2>
 
@@ -203,7 +203,6 @@
         <li><a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license">CC BY-NC</a></li>
         <li><a href="https://twitter.com/hail2unet">Twitter</a></li>
         <li><a href="https://www.facebook.com/hail2u.net">Facebook</a></li>
-        <li><a href="http://u2liah.tumblr.com/">Tumblr</a></li>
         <li><a href="/feed" rel="alternate" type="application/rss+xml">RSS</a></li>
       </ul>
     
