--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <main class="content">
         <section id="latest-article" class="topic">
-            <a href="/blog/rss/webhook-to-pubsubhubbub.html">
+            <a href="/blog/rss/webhook-to-pubsubhubbub.html" rel="prefetch">
               <h1 class="first-heading">WebhookからPubSubHubbubへの翻訳</h1>
 
               <footer class="section-footer">
@@ -170,7 +170,6 @@
         <li><a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license">CC BY-NC</a></li>
         <li><a href="https://twitter.com/hail2unet">Twitter</a></li>
         <li><a href="https://www.facebook.com/hail2u.net">Facebook</a></li>
-        <li><a href="http://u2liah.tumblr.com/">Tumblr</a></li>
         <li><a href="/feed" rel="alternate" type="application/rss+xml">RSS</a></li>
       </ul>
     
