--- a/documents/index.html
+++ b/documents/index.html
@@ -9,6 +9,8 @@
 
     <title itemprop="name">Documents - Hail2u.net</title>
 
+    <link href="//pagead2.googlesyndication.com" rel="preconnect dns-prefetch">
+    <link href="//www.google-analytics.com" rel="preconnect dns-prefetch">
     <link href="/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
     <link href="/documents/" rel="canonical">
     <link href="/feed" rel="alternate" type="application/rss+xml">
