--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <title itemprop="name">Hail2u.net</title>
 
+    <link href="//pagead2.googlesyndication.com" rel="preconnect dns-prefetch">
+    <link href="//www.google-analytics.com" rel="preconnect dns-prefetch">
     <link href="/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
     <link href="/" rel="canonical">
     <link href="/feed" rel="alternate" type="application/rss+xml">
@@ -76,7 +78,7 @@
 
     <main class="content">
         <section id="latest-article" class="topic">
-            <a href="/blog/webdesign/fetching-when-prefetching.html" rel="prefetch">
+            <a href="/blog/webdesign/fetching-when-prefetching.html" loadpolicy="next" rel="preload prerender">
               <h1 class="first-heading">プリフェッチ中のリクエスト</h1>
 
               <footer class="section-footer">
