--- a/about/style-guide/index.html
+++ b/about/style-guide/index.html
@@ -64,7 +64,7 @@
   <body>
     <header class="global-header" role="banner">
       <nav>
-        <a class="logo" href="/"><img alt="Hail2u.net" src="/images/logo.svg"></a>
+        <a class="logo" href="/">Hail2u.net</a>
 
         <ul class="site-navigation">
           <li><a href="/blog/">Weblog</a></li>
