--- a/about/index.html
+++ b/about/index.html
@@ -54,7 +54,7 @@
       <h1 class="tagline">There is nothing more than informations &amp; contact.</h1>
     </header>
 
-    <main class="content">
+    <main class="content" role="main">
       <section id="website">
         <h1 class="first-heading">このウェブサイトについて</h1>
 
