--- a/documents/index.html
+++ b/documents/index.html
@@ -54,7 +54,7 @@
       <h1 class="tagline">These are writings, translations, listing, tutorials &amp; others what I learned.</h1>
     </header>
 
-    <main class="content">
+    <main class="content" role="main">
       <section>
         <h1 class="first-heading"><a href="/documents/markup.html">“マークアップ”するということ ～ HTML5勧告に寄せて ～</a></h1>
 
