--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <h1 class="tagline">I write what I learned &amp; what is possible on the WWW from Japan.</h1>
     </header>
 
-    <main class="content">
+    <main class="content" role="main">
         <section id="latest-article" class="topic">
             <a href="/blog/internet/uptime-robot-to-ios-notification.html" loadpolicy="next" rel="preload prerender">
               <h1 class="first-heading">Uptime RobotからiOSの通知へ</h1>
