--- a/about/index.html
+++ b/about/index.html
@@ -80,7 +80,7 @@
 
         <figure>
           <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img alt="Creative Commons — Attribution-NonCommercial" src="/images/about/cc-by-nc.png"></a>
-          <figcaption>License Everything under a CC&#xa0;BY&#2011;NC</figcaption>
+          <figcaption>License Everything under a CC&#xa0;BY&#x2011;NC</figcaption>
         </figure>
 
         <p>このウェブサイト内の全ての文書とファイル(画像やスタイルシートを含みます)は、そのファイル自体に別のライセンス情報が明記または添付されていない限り<a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license">Creative Commons — Attribution-NonCommercial</a>の元で公開されています。</p>
