--- a/pub/test/638.html
+++ b/pub/test/638.html
@@ -7,13 +7,16 @@
     <title>Table Font Size on Mobile Safari 8</title>
 
     <style>
+      table {
+        border-spacing: 0;
+      }
+
       th {
         text-align: left;
       }
 
       .nowrapadding td,
       .nowrapadding th {
-        padding: 0.25rem 0;
         white-space: nowrap;
       }
     </style>
@@ -22,7 +25,7 @@
     <header>
       <h1>Table Font Size on Mobile Safari 8</h1>
 
-      <p>表のセルで<code>white-space: nowrap</code>を使いセルの内容を折り返さないようにし、かつ左右に<code>padding</code>プロパティーで余白を取った場合、Mobile Safari 8で表が画面をはみ出す時にセルのフォントサイズがおかしくなる。</p>
+      <p>表のセルで<code>white-space: nowrap</code>を使いセルの内容を折り返さないようにした場合、Mobile Safari 8では表が画面をはみ出す時にセルのフォントサイズがおかしくなる。</p>
     </header>
 
     <section class="nowrapadding">
@@ -53,11 +56,14 @@
           </tr>
         </tbody>
       </table>
+
+      <p>Mobile Safari 8/9で表のセルでのみフォントサイズがおかしくなる。大きくなる場合もあれば小さくなる場合もあり再現できない。いくつかのセルでは正常なフォントサイズのこともある。計算済みスタイルの値は正常。</p>
     </section>
 
     <section>
       <h1>通常</h1>
 
+      <p><b>Proin Nunc Sed (It is 16px/bold)</b></p>
       <table>
         <thead>
           <tr>
@@ -80,11 +86,5 @@
         </tbody>
       </table>
     </section>
-
-    <script>
-      window.addEventListener("load", function () {
-        alert(window.getComputedStyle(document.getElementById("test")).fontSize);
-      });
-    </script>
   </body>
 </html>
