Bye PlaceIMG, hello again lorempixel

--- a/pub/test/446.html
+++ b/pub/test/446.html
@@ -16,7 +16,7 @@
         padding: 0;
         width: 100%;
         height: 100%;
-        background-image: url("http://placeimg.com/1000/1000/any");
+        background-image: url("http://lorempixel.com/1000/1000/");
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
