--- a/pub/test/468.html
+++ b/pub/test/468.html
@@ -31,8 +31,8 @@
     </header>
 
     <section class="test">
-      <figure><img src="http://placeimg.com/480/480/any" class="transparent"></figure>
-      <figure><img src="http://placeimg.com/480/480/any"></figure>
+      <figure><img src="http://lorempixel.com/480/480/" class="transparent"></figure>
+      <figure><img src="http://lorempixel.com/480/480/"></figure>
     </section>
   </body>
 </html>
