--- a/pub/test/471.html
+++ b/pub/test/471.html
@@ -33,7 +33,7 @@
       <h1>with <code>padding</code></h1>
 
       <figure>
-        <img src="http://placeimg.com/240/240/any">
+        <img src="http://lorempixel.com/240/240/">
       </figure>
 
       <p>IE10で<code>border-radius</code>と<code>padding</code>の組み合わせだと画像が丸くならない。</p>
@@ -43,7 +43,7 @@
       <h1>with <code>border</code></h1>
 
       <figure>
-        <img src="http://placeimg.com/240/240/any">
+        <img src="http://lorempixel.com/240/240/">
       </figure>
 
       <p><code>border</code>との組み合わせだと画像が丸くなる。</p>
