--- a/pub/test/539.html
+++ b/pub/test/539.html
@@ -35,7 +35,7 @@
       <h1>left: 100%;</h1>
 
       <figure>
-        <img src="http://placeimg.com/480/270/any">
+        <img src="http://lorempixel.com/480/270/">
       </figure>
     </section>
 
@@ -43,7 +43,7 @@
       <h1>transform: translateX(100%);</h1>
 
       <figure>
-        <img src="http://placeimg.com/480/270/any">
+        <img src="http://lorempixel.com/480/270/">
       </figure>
     </section>
   </body>
