--- a/pub/test/545.html
+++ b/pub/test/545.html
@@ -108,7 +108,7 @@
   }
 </style>
 <div class="global-footer clearfix">
-  <div class="footer-logo column"><img src="http://placeimg.com/128/48/any"></div>
+  <div class="footer-logo column"><img src="http://lorempixel.com/128/48/"></div>
 
   <ul class="footer-nav column">
     <li><a href="/">Home</a></li>
