--- a/pub/test/547.html
+++ b/pub/test/547.html
@@ -41,7 +41,7 @@
   }
 
   .debug.message {
-    background-image: url("http://placeimg.com/32/32/any");
+    background-image: url("http://lorempixel.com/32/32/");
   }
 </style>
 <div class="message info debug">
