--- a/pub/test/567.html
+++ b/pub/test/567.html
@@ -85,7 +85,7 @@
       <h1>画像を六角形に切り抜く</h1>
 
       <figure class="hexclip">
-        <img src="http://placeimg.com/320/320/any">
+        <img src="http://lorempixel.com/320/320/">
       </figure>
 
       <p>7つのCSSグラデーションを画像の上に重ねて実現する。</p>
