--- a/pub/test/569.html
+++ b/pub/test/569.html
@@ -69,7 +69,7 @@
       <h1>画像を卵形に切り抜く</h1>
 
       <figure class="eggclip">
-        <img src="http://placeimg.com/320/320/any">
+        <img src="http://lorempixel.com/320/320/">
       </figure>
 
       <ul>
