--- a/pub/test/581.html
+++ b/pub/test/581.html
@@ -34,13 +34,13 @@
     <section class="test padding">
       <h1>pading</h1>
 
-      <img src="http://placeimg.com/320/320/any">
+      <img src="http://lorempixel.com/320/320/">
     </section>
 
     <section class="test border">
       <h1>border</h1>
 
-      <img src="http://placeimg.com/320/320/any">
+      <img src="http://lorempixel.com/320/320/">
     </section>
   </body>
 </html>
