--- a/pub/test/612.html
+++ b/pub/test/612.html
@@ -19,7 +19,7 @@
       <h1>Landscape Image</h1>
 
       <figure>
-        <a href="http://placeimg.com/480/270/any"><img height="270" src="http://placeimg.com/480/270/any" width="480"></a>
+        <a href="http://lorempixel.com/480/270/"><img height="270" src="http://lorempixel.com/480/270/" width="480"></a>
       </figure>
     </section>
 
@@ -27,7 +27,7 @@
       <h1>Portrait Image</h1>
 
       <figure>
-        <a href="http://placeimg.com/360/640/any"><img height="640" src="http://placeimg.com/360/640/any" width="360"></a>
+        <a href="http://lorempixel.com/360/640/"><img height="640" src="http://lorempixel.com/360/640/" width="360"></a>
       </figure>
     </section>
 
@@ -35,7 +35,7 @@
       <h1>Large Landscape Image</h1>
 
       <figure>
-        <a href="http://placeimg.com/2560/1440/any"><img height="1440" src="http://placeimg.com/2560/1440/any" width="2560"></a>
+        <a href="http://lorempixel.com/2560/1440/"><img height="1440" src="http://lorempixel.com/2560/1440/" width="2560"></a>
       </figure>
     </section>
 
@@ -43,7 +43,7 @@
       <h1>Large Portrait Image</h1>
 
       <figure>
-        <a href="http://placeimg.com/1080/1920/any"><img height="1920" src="http://placeimg.com/1080/1920/any" width="1080"></a>
+        <a href="http://lorempixel.com/1080/1920/"><img height="1920" src="http://lorempixel.com/1080/1920/" width="1080"></a>
       </figure>
     </section>
 
@@ -51,7 +51,7 @@
       <h1>Link Different Image</h1>
 
       <figure>
-        <a href="http://placeimg.com/960/540/any"><img height="90" src="http://placeimg.com/160/90/any" width="160"></a>
+        <a href="http://lorempixel.com/960/540/"><img height="90" src="http://lorempixel.com/160/90/" width="160"></a>
       </figure>
     </section>
 
@@ -68,7 +68,7 @@
 
     <script>
       (function () {
-        var images = document.querySelectorAll('section img[src^="http://placeimg.com/"]');
+        var images = document.querySelectorAll('section img[src^="http://lorempixel.com/"]');
         var image;
         var parent;
 
@@ -76,7 +76,7 @@
           image = images[i];
           parent = image.parentNode;
 
-          if (parent.tagName === 'A' && /^http:\/\/placeimg\.com\//.test(parent.getAttribute('href'))) {
+          if (parent.tagName === 'A' && /^http:\/\/lorempixel\.com\//.test(parent.getAttribute('href'))) {
             parent.addEventListener('click', function (image, evt) {
               if (evt.which !== 1) {
                 return;
