--- a/pub/test/618.html
+++ b/pub/test/618.html
@@ -30,7 +30,7 @@
     <section class="test">
       <h1>with src</h1>
 
-      <p><img src="http://placeimg.com/480/270/any"></p>
+      <p><img src="http://lorempixel.com/480/270/"></p>
     </section>
   </body>
 </html>
