--- a/pub/test/619.html
+++ b/pub/test/619.html
@@ -35,11 +35,11 @@
       <h1>No Animation</h1>
 
       <ul class="gallery no-animation">
-        <li id="first" class="image"><a href="#second"><img src="http://placeimg.com/480/270/animals"></a></li>
-        <li id="second" class="image"><a href="#third"><img src="http://placeimg.com/480/270/arch"></a></li>
-        <li id="third" class="image"><a href="#fourth"><img src="http://placeimg.com/480/270/nature"></a></li>
-        <li id="fourth" class="image"><a href="#fifth"><img src="http://placeimg.com/480/270/people"></a></li>
-        <li id="fifth" class="image"><a href="#first"><img src="http://placeimg.com/480/270/tech"></a></li>
+        <li id="first" class="image"><a href="#second"><img src="http://lorempixel.com/480/270/animals"></a></li>
+        <li id="second" class="image"><a href="#third"><img src="http://lorempixel.com/480/270/arch"></a></li>
+        <li id="third" class="image"><a href="#fourth"><img src="http://lorempixel.com/480/270/nature"></a></li>
+        <li id="fourth" class="image"><a href="#fifth"><img src="http://lorempixel.com/480/270/people"></a></li>
+        <li id="fifth" class="image"><a href="#first"><img src="http://lorempixel.com/480/270/tech"></a></li>
       </ul>
     </section>
   </body>
