--- a/pub/test/637.html
+++ b/pub/test/637.html
@@ -7,7 +7,7 @@
     <title>Fetching when Prefetching</title>
 
 
-    <link href="http://placeimg.com/1000/1000/any" rel="prefetch">
+    <link href="http://lorempixel.com/1000/1000/" rel="prefetch">
   </head>
   <body>
     <header>
@@ -31,7 +31,7 @@
 
     <script>
       setTimeout(function () {
-        document.getElementById("test").innerHTML = '<img src="http://placeimg.com/1000/1000/any">';
+        document.getElementById("test").innerHTML = '<img src="http://lorempixel.com/1000/1000/">';
       }, 1000);
     </script>
   </body>
