--- a/pub/test/517.html
+++ b/pub/test/517.html
@@ -36,7 +36,7 @@
       <h1>Lorem Ipsum</h1>
 
       <figure>
-        <img src="http://placeimg.com/160/160/any">
+        <img src="http://lorempixel.com/160/160/">
       </figure>
 
       <p>Donec libero risus, imperdiet ac scelerisque malesuada, accumsan ac arcu. Ut posuere dui in mattis consectetur. Pellentesque a luctus mauris, non consectetur magna. Maecenas dictum felis eget sapien faucibus imperdiet. Praesent tempus euismod sodales. In hac habitasse platea dictumst. Nulla lobortis pretium dolor, faucibus volutpat ligula laoreet id. Maecenas tincidunt accumsan pharetra. Maecenas sed cursus urna. Sed accumsan cursus urna, vel luctus sem iaculis nec. Maecenas vitae purus ac orci vehicula hendrerit quis volutpat nulla. Praesent dignissim nisl eu felis feugiat rutrum ut et nulla. Duis ut eros lacinia, ultricies neque eget, ullamcorper orci. Nullam nec sollicitudin ligula.</p>
