--- a/pub/test/567-2.html
+++ b/pub/test/567-2.html
@@ -49,7 +49,7 @@
       <h1>画像を六角形に切り抜く</h1>
 
       <figure class="hexclip">
-	<img src="http://placeimg.com/320/320/any">
+	<img src="http://lorempixel.com/320/320/">
       </figure>
 
       <p>擬似要素で<code>border</code>プロパティーを使って三角形を作る要領を逆にして、それを使って画像に枠を与える。</p>
@@ -57,7 +57,7 @@
       <h2>HTML</h2>
 
       <pre><code>&lt;figure class="hexclip"&gt;
-    &lt;img src=&quot;http://placeimg.com/320/320/any&quot;&gt;
+    &lt;img src=&quot;http://lorempixel.com/320/320/&quot;&gt;
       &lt;/figure&gt;</code></pre>
 
       <p>画像には擬似要素を直接使えないので、何らかの要素で括る必要がある。</p>
