--- a/pub/test/568.html
+++ b/pub/test/568.html
@@ -64,7 +64,7 @@
       <h1>画像を星形に切り抜く</h1>
 
       <figure class="starclip">
-        <img src="http://placeimg.com/320/320/any">
+        <img src="http://lorempixel.com/320/320/">
       </figure>
 
       <p>わかりやすいようにCSSグラデーションごとに色を変えた。</p>
