--- a/pub/test/622.html
+++ b/pub/test/622.html
@@ -59,55 +59,55 @@
     <section class="test">
       <h1>Normal</h1>
 
-      <p><img src="http://placeimg.com/480/270/any"></p>
+      <p><img src="http://lorempixel.com/480/270/"></p>
     </section>
 
     <section class="test protanopia">
       <h1>Protanopia (1型2色覚/赤色盲)</h1>
 
-      <p><img src="http://placeimg.com/480/270/any"></p>
+      <p><img src="http://lorempixel.com/480/270/"></p>
     </section>
 
     <section class="test protanomaly">
       <h1>Protanomaly (1型3色覚/赤色弱)</h1>
 
-      <p><img src="http://placeimg.com/480/270/any"></p>
+      <p><img src="http://lorempixel.com/480/270/"></p>
     </section>
 
     <section class="test deuteranopia">
       <h1>Deuteranopia (2型2色覚/緑色盲)</h1>
 
-      <p><img src="http://placeimg.com/480/270/any"></p>
+      <p><img src="http://lorempixel.com/480/270/"></p>
     </section>
 
     <section class="test deuteranomaly">
       <h1>Deuteranomaly (2型3色覚/緑色弱)</h1>
 
-      <p><img src="http://placeimg.com/480/270/any"></p>
+      <p><img src="http://lorempixel.com/480/270/"></p>
     </section>
 
     <section class="test tritanopia">
       <h1>Tritanopia (3型2色覚/青色盲)</h1>
 
-      <p><img src="http://placeimg.com/480/270/any"></p>
+      <p><img src="http://lorempixel.com/480/270/"></p>
     </section>
 
     <section class="test tritanomaly">
       <h1>Tritanomaly (3型3色覚/青色弱)</h1>
 
-      <p><img src="http://placeimg.com/480/270/any"></p>
+      <p><img src="http://lorempixel.com/480/270/"></p>
     </section>
 
     <section class="test achromatopsia">
       <h1>Achromatopsia (1色覚/全色盲)</h1>
 
-      <p><img src="http://placeimg.com/480/270/any"></p>
+      <p><img src="http://lorempixel.com/480/270/"></p>
     </section>
 
     <section class="test achromatomaly">
       <h1>Achromatomaly (異常3色覚/色弱)</h1>
 
-      <p><img src="http://placeimg.com/480/270/any"></p>
+      <p><img src="http://lorempixel.com/480/270/"></p>
     </section>
   </body>
 </html>
