--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
               
 
-              <p>このウェブログの本文で使っていた半角カッコを全角カッコに変えたくなった。文章校正的な理由ではなく、将来の縦書き化を見据えて今のうちに調節しておこうかなという程度の理由だ（半角カッコに戻すのは簡単そうだ、ということもある）。だが単純な置換ではなかなか難しく、手作業でやろうかと思ったが開き半角カッコだけで8000近くあったので無理そう……ということで一時間くらい色々考えた結果、「ASCII範囲外の文字を含む開き半角カッコと閉じ半角カッコのペア」を探して置換するのがよさそうという結論に至った。</p>
+              <p>このウェブログの本文で使っていた半角カッコを全角カッコに変えたくなった。文章校正的な理由ではなく、将来の縦書き化を見据えて今のうちに調節しておこうかなという程度の理由だ（半角カッコに戻すのは簡単そうだ、ということもある）。だが単純な置換ではなかなか難しく、手作業でやろうかと思ったが開き半角カッコだけで8000近くあったので無理そう……ということで一時間くらい色々考えた結果、ASCII範囲外の文字を含む開き半角カッコと閉じ半角カッコのペアを探して置換するのがよさそうという結論に至った。</p>
             </a>
         </section>
 
