--- a/pub/test/641.html
+++ b/pub/test/641.html
@@ -12,7 +12,7 @@
           local("Noto Sans"),
           local("Roboto"),
           local("Segoe UI"),
-          local("Tahome");
+          local("Tahoma");
       }
 
       .test {
@@ -31,6 +31,21 @@
       <h1>The System Font</h1>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquet, justo eget malesuada hendrerit, metus ligula feugiat nulla, nec euismod mi eros commodo justo. Fusce nec posuere dui. Pellentesque convallis rhoncus purus, sed pretium ipsum consectetur aliquam. Aliquam iaculis a ante nec ullamcorper. Duis in purus sed magna molestie fringilla vel ac odio. Sed varius ullamcorper mi sit amet eleifend. In at aliquam odio. Nam finibus felis in massa ornare, id suscipit tellus imperdiet. Nulla dignissim auctor eros, id placerat urna mattis eget. Mauris nec purus in diam cursus laoreet a at urna. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec purus neque, aliquam varius ipsum quis, ullamcorper venenatis justo. Phasellus nulla nunc, egestas vitae ex id, pretium pulvinar magna. Donec scelerisque justo id sapien ullamcorper, at vestibulum metus elementum. Praesent finibus odio et eleifend facilisis. Mauris malesuada a nunc et tincidunt.</p>
+
+      <pre><code>@font-face {
+  font-family: &quot;System&quot;;
+  src: local(&quot;-apple-system&quot;),
+    local(&quot;Helvetica Neue&quot;),
+    local(&quot;Noto Sans&quot;),
+    local(&quot;Roboto&quot;),
+    local(&quot;Segoe UI&quot;),
+    local(&quot;Tahoma&quot;);
+}
+
+.test {
+  font-family: &quot;System&quot;, sans-serif;
+}
+      </code></pre>
     </section>
   </body>
 </html>
