--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   · <span class="tag">Media</span></p>
               </footer>
 
-              <figure><img alt="WEB+DB PRESS Vol.89" src="https://images-fe.ssl-images-amazon.com/images/I/61aoxzmo9OL.jpg"></figure>
+              <figure><img alt="WEB+DB PRESS Vol.89" height="500" src="https://images-fe.ssl-images-amazon.com/images/I/61aoxzmo9OL.jpg" width="354"></figure>
 
               <p>以前記事を書いてより毎号WEB+DB PRESSをいただいているが、感想を書いてなくて申し訳ない。謝罪から始めたが、11/24発売の第89号に載っていた@kazuhoによる速習HTTP/2という記事が非常に良かった。これはフロントエンド側の人からもっとデザイナーよりの人にまでも薦めることのできるHTTP/2の入門記事だと感じた。</p>
             </a>
