--- a/about/index.html
+++ b/about/index.html
@@ -103,7 +103,7 @@
 
         <h2>製作に使っているツール</h2>
 
-        <ul class="flat-ul">
+        <ul class="flat-list">
           <li><a href="http://blosxom.sourceforge.net/">Blosxom</a></li>
           <li><a href="https://github.com/hail2u/node-css-mqpacker">CSS MQPacker</a></li>
           <li><a href="https://github.com/hail2u/node-csswring">CSSWring</a></li>
@@ -129,7 +129,7 @@
 
         <h2>ウェブサイト上で使っているツール</h2>
 
-        <ul class="flat-ul">
+        <ul class="flat-list">
           <li><a href="https://github.com/hail2u/unutm">UnUTM</a></li>
         </ul>
 
