--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width" name="viewport">
     <meta content="Hail2u.netについて、奥付、問い合わせする際の連絡先についてのページです。" name="description">
 
-    <title>About - Hail2u.net</title>
+    <title>About - Hail2u​.net</title>
 
     <link href="/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
     <link href="/about/" rel="canonical">
@@ -33,7 +33,7 @@
   <body>
     <header class="global-header" role="banner">
       
-      <h1 class="logo"><a href="/">Hail2u.net</a></h1>
+      <h1 class="logo"><a href="/">Hail2u​.net</a></h1>
     
       <nav class="site-navigation">
         <ul>
