--- a/pub/test/644.html
+++ b/pub/test/644.html
@@ -18,12 +18,12 @@
         content: "訪問済み ";
       }
 
-      .test a:visited {
-        color: #f00;
+      .test a > * {
+        color: #00f;
       }
 
-      .test a span {
-        color: #00f;
+      .test a:visited {
+        color: #f00;
       }
     </style>
   </head>
