--- a/pub/test/645.html
+++ b/pub/test/645.html
@@ -20,6 +20,7 @@
   <body>
     <header>
       <h1>Test ex Unit</h1>
+      <p><code>ex</code>単位のフォントによる違いをテストするページです。</p>
     </header>
 
     <section class="test">
@@ -28,6 +29,7 @@
         <li style="font-family: Georgia">Georgia</li>
         <li style="font-family: Verdana">Verdana</li>
         <li style="font-family: Courier New">Courier New</li>
+        <li style="font-family: Impact">Impact</li>
         <li style="font-family: Hoefler Text">Hoefler Text</li>
         <li style="font-family: Constantia">Constantia</li>
         <li style="font-family: Helvetica Neue">Neue Helvetica</li>
