--- a/pub/test/645.html
+++ b/pub/test/645.html
@@ -6,41 +6,78 @@
     <title>Test ex Unit</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro|Source+Sans+Pro|Source+Code+Pro" rel="stylesheet">
     <style>
+      .test ul {
+        padding-left: 0;
+      }
+
+      .test li,
+      .test li:before {
+        border-radius: 2px;
+        display: block;
+        width: 100ex;
+      }
+
       .test li {
         background-color: #144673;
         color: #fff;
-        display: block;
-        line-height: 2;
+        line-height: 1;
         margin-bottom: .25em;
-        padding-left: .5em;
-        width: 100ex;
+        padding: .5em;
+        position: relative;
+      }
+
+      .test li:before,
+      .test li:after {
+        background-color: #d93153;
+        content: "";
+        font-family: sans-serif;
+        height: 100%;
+        position: absolute;
+        top: 0;
+      }
+
+      .test li:before {
+        left: 0;
+        z-index: -1;
+      }
+
+      .test li:after {
+        right: 0;
+        width: calc(100% - 100ex);
+        z-index: 1;
       }
     </style>
   </head>
   <body>
     <header>
       <h1>Test ex Unit</h1>
-      <p><code>ex</code>単位のフォントによる違いをテストするページです。</p>
+      <p><code>ex</code>単位のフォントによる違いのテスト・ページです。<code>sans-serif</code>を指定した場合に比べ、どれくらい増減するかを赤で確認することができます。また入力フォームから任意のローカルにあるフォントを指定してリストに追加することができます。</p>
     </header>
 
     <section class="test">
-      <ul>
-        <li>No Font</li>
+      <form id="addFont">
+        <input placeholder="MS PGothic" size="32">
+      </form>
+      <ul id="fonts">
         <li style="font-family: Georgia">Georgia</li>
         <li style="font-family: Verdana">Verdana</li>
         <li style="font-family: Courier New">Courier New</li>
         <li style="font-family: Impact">Impact</li>
-        <li style="font-family: Hoefler Text">Hoefler Text</li>
-        <li style="font-family: Constantia">Constantia</li>
-        <li style="font-family: Helvetica Neue">Neue Helvetica</li>
-        <li style="font-family: Calibri">Calibri</li>
-        <li style="font-family: Palatino">Palatino</li>
-        <li style="font-family: Palatino Linotyoe">Palatino Linotype</li>
-        <li style="font-family: Menlo">Menlo</li>
-        <li style="font-family: Consolas">Consolas</li>
         <li style="font-family: Source Serif Pro">Source Serif Pro</li>
         <li style="font-family: Source Sans Pro">Source Sans Pro</li>
         <li style="font-family: Source Code Pro">Source Code Pro</li>
       </ul>
+    </section>
+    <script>
+      document.getElementById("addFont").addEventListener("submit", function (evt) {
+        var f = evt.target[0].value;
+        var li = document.createElement("li");
+        li.style.fontFamily = f;
+        li.appendChild(document.createTextNode(f));
+        document.getElementById("fonts").appendChild(li);
+        evt.target.reset();
+        evt.preventDefault();
+      });
+    </script>
   </body>
 </html>
