--- a/pub/test/645.html
+++ b/pub/test/645.html
@@ -30,7 +30,7 @@
       .test li:after {
         background-color: #d93153;
         content: "";
-        font-family: sans-serif;
+        font-family: Arial;
         height: 100%;
         position: absolute;
         top: 0;
@@ -51,7 +51,7 @@
   <body>
     <header>
       <h1>Test ex Unit</h1>
-      <p><code>ex</code>単位のフォントによる違いのテスト・ページです。<code>sans-serif</code>を指定した場合に比べ、どれくらい増減するかを赤で確認することができます。また入力フォームから任意のローカルにあるフォントを指定してリストに追加することができます。</p>
+      <p><code>ex</code>単位のフォントによる違いのテスト・ページです。Arialを指定した場合に比べ、どれくらい増減するかを赤で確認することができます（左に赤のバーが伸びている場合はx-heightがArialより低く、右に伸びている場合は高い）。また入力フォームから任意のローカルにあるフォントを指定してリストに追加することができます。</p>
     </header>
 
     <section class="test">
