--- a/pub/test/645.html
+++ b/pub/test/645.html
@@ -11,9 +11,15 @@
       }
 
       .test li,
-      .test li:before {
+      .test li:before,
+      .test li:after {
         border-radius: 2px;
+        box-sizing: border-box;
         display: block;
+      }
+
+      .test li,
+      .test li:before {
         width: 100ex;
       }
 
